corrected HTML file details and added h1 tag

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
 <title>This is our Website</title>
-<p> I Love Butterscoth and blue current ice cream</P>
+<h1>What is this project about</h1>
+<p> Financial Risk Analtics_demo_project</P>
 </html>
