added ? to end the setence

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
 <title>This is our Website</title>
-<h1>What is this project about</h1>
+<h1>What is this project about ?</h1>
 <p> Financial Risk Analtics_demo_project</P>
 </html>
